@@ -27,7 +27,7 @@ function auto_entitylabel_settings_default_page() {
     $content_type_name = $content_type->name;
     $content_types_machine_name = $content_type->type;
     $markup .= '<li class="leaf">';
-    $markup .= '<a href="/admin/structure/types/manage/' . $content_types_machine_name . '/auto_label">' . $content_type_name . '</a>';
+    $markup .= '<a href="' . base_path() . 'admin/structure/types/manage/' . $content_types_machine_name . '/auto_label">' . $content_type_name . '</a>';
     $markup .= '<div class="description">' . t('AUTOMATIC LABEL GENERATION FOR @content_type_name', array('@content_type_name' => strtoupper($content_type_name))) . '</div>';
     $markup .= '</li>';
   }
@@ -52,7 +52,7 @@ function auto_entitylabel_settings_default_page() {
     $content_type_name = $content_type->name;
     $content_types_machine_name = $content_type->type;
     $markup .= '<li class="leaf">';
-    $markup .= '<a href="/admin/structure/types/manage/' . $content_types_machine_name . '/comment/auto_label">' . $content_type_name . '</a>';
+    $markup .= '<a href="' . base_path() . 'admin/structure/types/manage/' . $content_types_machine_name . '/comment/auto_label">' . $content_type_name . '</a>';
     $markup .= '<div class="description">' . t('AUTOMATIC LABEL GENERATION FOR @content_type_name COMMENTS', array('@content_type_name' => strtoupper($content_type_name))) . '</div>';
     $markup .= '</li>';
   }
@@ -80,12 +80,12 @@ function auto_entitylabel_settings_form($form, $form_state, $entity_type, $bundl
     '#type' => 'fieldset',
     '#title' => t('Automatic label generation for @type', array('@type' => $bundle_label)),
     '#weight' => 0,
-    /* '#attached' => array( // Not needed anymore at the moment.
+    '#attached' => array(
       'js' => array(
         'auto-entitylabel' =>
-         drupal_get_path('module', 'auto_entitylabel') . '/auto_entitylabel.js',
+         drupal_get_path('module', 'auto_entitylabel') . '/js/auto_entitylabel.admin.js',
       ),
-    ),*/
+    ),
   );
   $form['auto_entitylabel']['auto_entitylabel_' . $key] = array(
     '#type' => 'radios',
@@ -97,6 +97,7 @@ function auto_entitylabel_settings_form($form, $form_state, $entity_type, $bundl
     '#title' => t('Pattern for the title'),
     '#description' => t('Leave blank for using the per default generated title. Otherwise this string will be used as title. Use the syntax [token] if you want to insert a replacement pattern.'),
     '#default_value' => variable_get('auto_entitylabel_pattern_' . $key, ''),
+    '#attributes' => array('class' => array('pattern-label')),
   );
   // Don't allow editing of the pattern if PHP is used, but the users lacks
   // permission for PHP.
