@@ -246,7 +246,8 @@ function auto_entitylabel_is_needed($entity, $entity_type, $reset = FALSE) {
     // Is the label empty?
     $empty_label = (empty($entity->{$settings['title']})
       // AUTO_ENTITYLABEL_PLACEHOLDER needs to be treated as empty as well.
-      || $entity->{$settings['title']} == AUTO_ENTITYLABEL_PLACEHOLDER);
+      || $entity->{$settings['title']} == AUTO_ENTITYLABEL_PLACEHOLDER
+      || empty($entity->auto_entitylabel_applied));
 
     // Is the auto label optional?
     $label_optional = ($setting == AUTO_ENTITYLABEL_OPTIONAL);
@@ -398,6 +399,15 @@ function auto_entitylabel_operations_update($nodes) {
 }
 
 /**
+ * Callback function for decoding HTML entities.
+ */
+function _auto_entitylabel_nohtmlentities(&$replacements, $data, $options) {
+  foreach ($replacements as $key => $value) {
+    $replacements[$key] = decode_entities($value);
+  }
+}
+
+/**
  * Helper function to generate the title according to the settings.
  *
  * @return output
@@ -410,6 +420,7 @@ function _auto_entitylabel_patternprocessor($pattern, $entity, $entity_type, $la
   $language_obj = $language == LANGUAGE_NONE ? NULL : $languages[$language];
   $token_data = isset($info['token type']) ? array($info['token type'] => $entity) : array();
   $output = token_replace($pattern, $token_data, array(
+    'callback' => '_auto_entitylabel_nohtmlentities',
     'sanitize' => FALSE,
     'clear' => TRUE,
     'language' => $language_obj,
@@ -422,8 +433,9 @@ function _auto_entitylabel_patternprocessor($pattern, $entity, $entity_type, $la
   }
 
   // Strip tags.
-  if (isset($entity_type) && isset($entity->type)) {
-    $strip_tags = variable_get('auto_entitylabel_strip_' . $entity_type . '_' . $entity->type, 1);
+  if ($entity_type && $entity) {
+    list(,,$bundle_name) = entity_extract_ids($entity_type, $entity);
+    $strip_tags = variable_get('auto_entitylabel_strip_' . $entity_type . '_' . $bundle_name, 1);
     if ($strip_tags) {
       $output = preg_replace('/[\t\n\r\0\x0B]/', '', strip_tags($output));
     }
